--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
                 <div class="form-third-title"><h3>Vyplňte tento krátky formulár a my sa Vám čoskoro ozveme!</h3></div> 
             </div>
-                <form class="form-container">
+                <form class="form-container" action="https://formcarry.com/s/ZZxPXO-Krig" method="POST" enctype="multipart/form-data">
                     <div class="input-field">
                         <input type="username" required spellcheck="false"> 
                         <label>Meno</label>
