edit in email form

--- a/index.html
+++ b/index.html
@@ -126,32 +126,32 @@
             </div>
                 <form class="form-container" action="https://formcarry.com/s/ZZxPXO-Krig" method="POST" enctype="multipart/form-data">
                     <div class="input-field">
-                        <input type="username" required spellcheck="false"> 
+                        <input type="username" name="username" required spellcheck="false"> 
                         <label>Meno</label>
                     </div>
                     <div class="input-field">
-                        <input type="surname" required spellcheck="false"> 
+                        <input type="surname" name="surname" required spellcheck="false"> 
                         <label>Priezvisko</label>
                     </div>
                     
                     <div class="input-field">
-                        <input type="email" required spellcheck="false"> 
+                        <input type="email" name="email" required spellcheck="false"> 
                         <label>Email</label>
                     </div>
 
                     <div class="input-field">
-                        <input type="tel" required spellcheck="false"> 
+                        <input type="tel" name="tel" required spellcheck="false"> 
                         <label>Tel. č.</label>
                     </div>
 
                     <div class="input-field full-width">
-                        <input type="text" required spellcheck="false"> 
+                        <input type="text" name="text" required spellcheck="false"> 
                         <label>Názov Vašej firmy</label>
                     </div>
 
                     <div class="input-field  full-width">
                         <h5 class="form-label color-gold">Vaša poznámka pre nás:</h5>
-                        <textarea id="message" placeholder="..." class="form-textarea full-width"></textarea>
+                        <textarea id="message" name="textarea" placeholder="..." class="form-textarea full-width"></textarea>
                     </div>
                     <button type="submit" class="submit-button"><span class="montserrat-medium submit-btn">Odošli formulár</span></button>
 
