SEO content optimization

--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
     gtag('config', 'G-1Q2Y5F9Y23');
     </script>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A layout example that shows off a blog page with a list of posts.">
+    <title>DVP Construction &ndash; Efektívny marketing na socialných sietach pre Vašu stavebnú firmu. | Zvyšujeme Váš dosah, zvýšime Vaše zisky.</title>
+    <meta name="description" content="Pomáhame stavebným firmám na Slovensku rásť digitálne prostredníctvom reklám na sociálnych sietiach a marketingu.">
+    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="colors.css">
     <link rel="stylesheet" href="buttons.css">
     <link rel="stylesheet" href="input.css">
     <link rel="stylesheet" href="styles.css">
-
-    <title>Blog &ndash; Layout Examples &ndash; Pure</title>
     <!-- pure CSS -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous"> -->
     <!-- bluma -->
@@ -32,11 +31,11 @@
     <main id="hero-section" data-anchor="Page 1">
         <div class="hero-wrapper">
             <div class="navigation">
-                <div class="logo-section"><span class="montserrat-alternates-bold logo"><a class="color-gold">DVP</a><a class="color-snowwhite"> Construction</a></span></div>
+                <div class="logo-section"><span class="montserrat-alternates-bold logo"><a href="https://alg0ritmus.github.io/DVP_construction/"><span>DVP</span><span class="color-snowwhite"> Construction</span></a></div>
                 <div class="contact-section"><a href="#contact-form" class="btn-white-outline montserrat-alternates-bold">Kontakt</a></div>
             </div>
             <div class="wave-separator">
-                <img src="images/wave.svg" alt="DVG Construction wave separator" width="100%" height="100%">
+                <img src="images/wave.svg" width="100%" height="100%">
             </div>
             <div class="hero-body">
                 <div class="hero-body-content">
@@ -53,7 +52,7 @@
                     </div>
                 </div>
                     <div class="hero-body-image-section">
-                        <img src="images/hero-building.svg" alt="DVG Construction hero building image" width="100%" height="100%">
+                        <img src="images/hero-building.svg" alt="DVG Construction - Optimalizujeme Vaše sociálne siete a vytvoríme cielený marketing na sociálnych sietiach pre vašu stavebnú firmu" width="100%" height="100%">
                     </div>
             </div>
         </div>
@@ -62,21 +61,21 @@
         <div class="card-wrapper">
             <div class="card">
                 <div class="card-icon">
-                    <img src="images/img1.svg" alt="DVG Construction hero building image" width="100%" height="100%">
+                    <img src="images/img1.svg" alt="Sme Vám neustále k dispozícii, pripravení zvyšovať Vaše zisky." width="100%" height="100%">
                 </div>
                 <div class="card-title montserrat-bold">Neustála Dostupnosť</div>
                 <div class="card-body montserrat-medium">Vždy sme tu pre Vás, pripravení odpovedať na všetky Vaše otázky a podnety.</div>
             </div>
             <div class="card">
                 <div class="card-icon">
-                    <img src="images/img3.svg" alt="DVG Construction hero building image" width="100%" height="100%">
+                    <img src="images/img3.svg" alt="Kvalitný marketing na soc. sietach, ktorý dosahuje viditeľné výsledky." width="100%" height="100%">
                 </div>
                 <div class="card-title montserrat-bold">Najprv príjmy, potom výdavky</div>
                 <div class="card-body montserrat-medium">Neplatíte nám vopred náklady, ktoré narušia váš peňažný tok. Potom, čo sme vám zarobili peniaze, dostaneme kompenzáciu.</div>
             </div>
             <div class="card">
                 <div class="card-icon">
-                    <img src="images/img2.svg" alt="DVG Construction hero building image" width="100%" height="100%">
+                    <img src="images/img2.svg" alt="Spolupráca s nami Vám odštartuje škálovanie Vašej firmy." width="100%" height="100%">
                 </div>
                 <div class="card-title montserrat-bold">Škálovací potenciál</div>
                 <div class="card-body montserrat-medium">Peniaze zarobené reklamou môžete reinvestovať do a reklamy. Je to samonosné koleso.</div>
@@ -87,10 +86,10 @@
         <div class="kts-wrapper">
             <div class="kts-title">
                 <div class="kts-text">5 Krokov k <span class="montserrat-alternates-bold">úspechu</span> v roku 2024<span class="color-gold">.</span></div>
-                <div class="kts-underlying"><img src="images/underlying.svg" alt="DVG Construction hero building image" width="100%" height="100%"></div>
+                <div class="kts-underlying"><img src="images/underlying.svg" width="100%" height="100%"></div>
             </div>
-            <div class="kts-body kts-img-1"><img src="images/steps_small.svg" alt="DVG Construction hero building image" width="100%" height="100%"></div>
-            <div class="kts-body kts-img-2"><img src="images/steps.svg" alt="DVG Construction hero building image" width="100%" height="100%"></div>
+            <div class="kts-body kts-img-1"><img src="images/steps_small.svg" alt="Päť krokov k úspechu na socialných sieatch - Efektívna reklamná kampaň na sociálnych sietach. Interaktívna správa sociálnych sietí. Moderná a prehľadná webová stránka. Špičková analýza a efektívna optimalizácia webových stránok. Vhodný emailový marketing." width="100%" height="100%"></div>
+            <div class="kts-body kts-img-2"><img src="images/steps.svg" alt="Vytvorili sme pre Vás 5 krokov, ktorými vybudujete Váš biznis v digitálnom priestore a zvýšite počet zákazok." width="100%" height="100%"></div>
         </div>
     </section>
     <section class="we-help-section bg-color-snowwhite" data-anchor="Page 4">
@@ -100,7 +99,7 @@
                 <div class="header-2 montserrat-bold">Pôsobíte na východnom Slovensku? </div>
                 <div class="we-help-text montserrat-medium">Zarezervujte si ešte dnes <span class="montserrat-bold">bezplatnú</span> konzultáciu a získajte výhodný balík služieb, ktoré Vám pomôžu dosiahnuť úspech!</div>
                 <div class="we-help-logo img-over-btn">
-                    <img src="images/svk_map_edited.svg" alt="DVG Construction hero building image" width="100%" height="100%">
+                    <img src="images/svk_map_edited.svg" alt="Podporujeme lokálne firmy pôsobiace na východnom Slovensku, napr. v okresoch Bardejov, Humenné, Kežmarok, Levoča, Medzilaborce, Poprad, Prešov, Sabinov, Snina, Stará Ľubovňa, Stropkov, Svidník a Vranov nad Topľou." width="100%" height="100%">
                 </div>
                 <div class="we-help-cta-btn">
                     <a href="#contact-form" class="btn-dark montserrat-medium cta-btn">Konzultácia <span class="montserrat-bold">zdarma</span></a>
@@ -108,7 +107,7 @@
                 
             </div>
             <div class="we-help-logo" hidden>
-                <img src="images/svk_map_edited.svg" alt="DVG Construction hero building image" width="100%" height="100%">
+                <img src="images/svk_map_edited.svg" alt="Pomáhame lokálnym firmám v rôznych častiach východného Slovenska, ako sú okresy Gelnica, Košice, Košice-okolie, Michalovce, Rožňava, Sobrance, Spišská Nová Ves a Trebišov." width="100%" height="100%">
             </div>
         </div>
 
@@ -116,8 +115,8 @@
     <section class="form-section" data-anchor="Page 5">
         <div class="left-side-form">
             <div class="left-side-form-logo">
-                <img class="form-img-1" src="images/art.svg" alt="DVG Construction hero building image" width="100%" height="100%">
-                <img class="form-img-2" src="images/art_w_logo.svg" alt="DVG Construction hero building image" width="100%" height="100%">
+                <img class="form-img-1" src="images/art.svg"  width="100%" height="100%">
+                <img class="form-img-2" src="images/art_w_logo.svg" alt="DVG Construction - reklamy na socialnych sietach, ktoré zvyššia vaše zisky." width="100%" height="100%">
             </div>
             <div class="left-side-form-contact">
                 <div class="lsf-contact-box"></div>
@@ -127,7 +126,7 @@
             <div class="form-following-text" id="contact-form">
                 <div class="form-title">
                     <div class="form-text"><h1 class="montserrat-medium">Ste pripravený digitálne podporiť <span class="montserrat-bold">rast</span> Vašej firmy<span class="color-gold">?</span></h1></div>
-                    <div class="form-underlying"><img src="images/underlying.svg" alt="DVG Construction hero building image" width="100%" height="100%"></div>
+                    <div class="form-underlying"><img src="images/underlying.svg" width="100%" height="100%"></div>
                 </div>
                 <div class="form-second-title">
                     <h2>Už ostáva len posledný krok.</h2> 
@@ -141,22 +140,22 @@
                     </div>
                     <div class="input-field">
                         <input type="surname" name="surname" required spellcheck="false"> 
-                        <label>Priezvisko</label>
+                        <label for="surname">Priezvisko</label>
                     </div>
                     
                     <div class="input-field">
                         <input type="email" name="email" required spellcheck="false"> 
-                        <label>Email</label>
+                        <label for="email">Email</label>
                     </div>
 
                     <div class="input-field">
                         <input type="tel" name="tel" required spellcheck="false"> 
-                        <label>Tel. č.</label>
+                        <label for="tel">Tel. č.</label>
                     </div>
 
                     <div class="input-field full-width">
-                        <input type="text" name="text" required spellcheck="false"> 
-                        <label>Názov Vašej firmy</label>
+                        <input type="text" name="company" required spellcheck="false"> 
+                        <label for="company">Názov Vašej firmy</label>
                     </div>
 
                     <div class="input-field  full-width">
