patch for pagespeed insights

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
     gtag('config', 'G-1Q2Y5F9Y23');
     </script>
-    <meta charset="utf-8">
-    <title>DVP Construction &ndash; Efektívny marketing na socialných sietach pre Vašu stavebnú firmu. | Zvyšujeme Váš dosah, zvýšime Vaše zisky.</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pomáhame stavebným firmám na Slovensku rásť digitálne prostredníctvom reklám na sociálnych sietiach a marketingu.">
-    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
+    <title>DVP Construction &ndash; Efektívny marketing na socialných sietach pre Vašu stavebnú firmu. Zvyšujeme Váš dosah, zvýšime Vaše zisky.</title>
+    <link rel="icon" href="images/icon.png">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="colors.css">
     <link rel="stylesheet" href="buttons.css">
@@ -31,11 +32,11 @@
     <main id="hero-section" data-anchor="Page 1">
         <div class="hero-wrapper">
             <div class="navigation">
-                <div class="logo-section"><span class="montserrat-alternates-bold logo"><a href="https://alg0ritmus.github.io/DVP_construction/"><span>DVP</span><span class="color-snowwhite"> Construction</span></a></div>
+                <div class="logo-section"><span class="montserrat-alternates-bold logo"><a href="https://alg0ritmus.github.io/DVP_construction/"><span class="color-gold">DVP</span><span class="color-snowwhite"> Construction</span></a></div>
                 <div class="contact-section"><a href="#contact-form" class="btn-white-outline montserrat-alternates-bold">Kontakt</a></div>
             </div>
             <div class="wave-separator">
-                <img src="images/wave.svg" width="100%" height="100%">
+                <img src="images/wave.svg" alt="DVP Construction - marketing na soc. sietach pre Vas" width="100%" height="100%">
             </div>
             <div class="hero-body">
                 <div class="hero-body-content">
@@ -86,7 +87,6 @@
         <div class="kts-wrapper">
             <div class="kts-title">
                 <div class="kts-text">5 Krokov k <span class="montserrat-alternates-bold">úspechu</span> v roku 2024<span class="color-gold">.</span></div>
-                <div class="kts-underlying"><img src="images/underlying.svg" width="100%" height="100%"></div>
             </div>
             <div class="kts-body kts-img-1"><img src="images/steps_small.svg" alt="Päť krokov k úspechu na socialných sieatch - Efektívna reklamná kampaň na sociálnych sietach. Interaktívna správa sociálnych sietí. Moderná a prehľadná webová stránka. Špičková analýza a efektívna optimalizácia webových stránok. Vhodný emailový marketing." width="100%" height="100%"></div>
             <div class="kts-body kts-img-2"><img src="images/steps.svg" alt="Vytvorili sme pre Vás 5 krokov, ktorými vybudujete Váš biznis v digitálnom priestore a zvýšite počet zákazok." width="100%" height="100%"></div>
@@ -115,7 +115,7 @@
     <section class="form-section" data-anchor="Page 5">
         <div class="left-side-form">
             <div class="left-side-form-logo">
-                <img class="form-img-1" src="images/art.svg"  width="100%" height="100%">
+                <img class="form-img-1" src="images/art.svg" alt="DVP Construction - marketing na soc. sietach pre Vas" width="100%" height="100%">
                 <img class="form-img-2" src="images/art_w_logo.svg" alt="DVG Construction - reklamy na socialnych sietach, ktoré zvyššia vaše zisky." width="100%" height="100%">
             </div>
             <div class="left-side-form-contact">
@@ -126,7 +126,6 @@
             <div class="form-following-text" id="contact-form">
                 <div class="form-title">
                     <div class="form-text"><h1 class="montserrat-medium">Ste pripravený digitálne podporiť <span class="montserrat-bold">rast</span> Vašej firmy<span class="color-gold">?</span></h1></div>
-                    <div class="form-underlying"><img src="images/underlying.svg" width="100%" height="100%"></div>
                 </div>
                 <div class="form-second-title">
                     <h2>Už ostáva len posledný krok.</h2> 
@@ -135,26 +134,26 @@
             </div>
                 <form class="form-container" action="https://formcarry.com/s/ZZxPXO-Krig" method="POST" enctype="multipart/form-data">
                     <div class="input-field">
-                        <input type="username" name="username" required spellcheck="false"> 
-                        <label>Meno</label>
+                        <input type="username" name="username" id="username" required spellcheck="false"> 
+                        <label for="username">Meno</label>
                     </div>
                     <div class="input-field">
-                        <input type="surname" name="surname" required spellcheck="false"> 
+                        <input type="surname" name="surname" id="surname" required spellcheck="false"> 
                         <label for="surname">Priezvisko</label>
                     </div>
                     
                     <div class="input-field">
-                        <input type="email" name="email" required spellcheck="false"> 
+                        <input type="email" name="email" id="email" required spellcheck="false"> 
                         <label for="email">Email</label>
                     </div>
 
                     <div class="input-field">
-                        <input type="tel" name="tel" required spellcheck="false"> 
+                        <input type="tel" name="tel" id="tel" required spellcheck="false"> 
                         <label for="tel">Tel. č.</label>
                     </div>
 
                     <div class="input-field full-width">
-                        <input type="text" name="company" required spellcheck="false"> 
+                        <input type="text" name="company" id="company" spellcheck="false"> 
                         <label for="company">Názov Vašej firmy</label>
                     </div>
 
