--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         </div>
                         <div class="hero-text-separator"></div>
                         <div class="hero-cta-btn">
-                            <a href="#contact-form" class="btn-dark montserrat-medium cta-btn">Získajte <span class="montserrat-alternates-bold">viac</span> klientov</a>
+                            <a href="https://dvp-construction.sk/#contact-form" class="btn-dark montserrat-medium cta-btn">Získajte <span class="montserrat-alternates-bold">viac</span> klientov</a>
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                     <span class="new-price">100€</span>
                 </h3>
                 <p>mesačne</p>
-                <a href="#" class="pricing-btn">Mám záujem</a>
+                <a href="https://dvp-construction.sk/#contact-form" class="pricing-btn">Mám záujem</a>
                 <ul>
                     <li>✔ Tvorba reklám na soc. sieťach</li>
                     <li>✔ Optimalizácia reklám</li>
@@ -153,7 +153,7 @@
                     <span class="new-price">150€</span>
                 </h3>
                 <p>mesačne</p>
-                <a href="#" class="pricing-btn">Mám záujem</a>
+                <a href="https://dvp-construction.sk/#contact-form" class="pricing-btn">Mám záujem</a>
                 <ul>
                     <li>✔ Zahŕňa balíček Základ</li>
                     <li>✔ Tvorba a správa soc. sietí</li>
@@ -170,7 +170,7 @@
                     <span class="new-price">250€</span>
                 </h3>
                 <p>mesačne</p>
-                <a href="#" class="pricing-btn">Mám záujem</a>
+                <a href="https://dvp-construction.sk/#contact-form" class="pricing-btn">Mám záujem</a>
                 <ul>
                     <li>✔ Zahŕňa balíček Štandard</li>
                     <li>✔ Tvorba komplexných reklamných kampaní</li>
@@ -193,7 +193,7 @@
                     <img src="images/svk_map_edited.svg" alt="Podporujeme lokálne firmy pôsobiace na východnom Slovensku, napr. v okresoch Bardejov, Humenné, Kežmarok, Levoča, Medzilaborce, Poprad, Prešov, Sabinov, Snina, Stará Ľubovňa, Stropkov, Svidník a Vranov nad Topľou." width="100%" height="100%">
                 </div>
                 <div class="we-help-cta-btn">
-                    <a href="#contact-form" class="btn-dark montserrat-medium cta-btn">Konzultácia <span class="montserrat-bold">zdarma</span></a>
+                    <a href="https://dvp-construction.sk/#contact-form" class="btn-dark montserrat-medium cta-btn">Konzultácia <span class="montserrat-bold">zdarma</span></a>
                 </div>
                 
             </div>
