--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="buttons.css">
     <link rel="stylesheet" href="input.css">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnapp.websitepolicies.net/widgets/cookies/rvnllu99.js" defer></script>
     <!-- pure CSS -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous"> -->
     <!-- bluma -->
@@ -446,7 +447,4 @@ openCookieModal();
 
 
 </script>
-
-  
-
 </html>
