--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <div class="logo-section"><span class="montserrat-alternates-bold logo"><a href="https://dvp-construction.sk/"><span class="color-gold">DVP</span><span class="color-snowwhite"> Construction</span></a></div>
                 <div class="contact-section">
                     <a href="#contact-form" class="btn-white-outline montserrat-alternates-bold">Kontakt</a>
-                    <a href="#contact-form" class="btn-white-outline montserrat-alternates-bold">O nás</a>
+                    <a href="#contact-form" class="btn-white-outline montserrat-alternates-bold">Služby</a>
                 </div>
             </div>
             <div class="hero-body">
