--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="logo-section"><span class="montserrat-alternates-bold logo"><a href="https://dvp-construction.sk"><span class="color-gold">DVP</span><span class="color-snowwhite"> Construction</span></a></div>
                 <div class="contact-section">
                     <a href="https://dvp-construction.sk/#contact-form" class="btn-white-outline montserrat-alternates-bold">Kontakt</a>
-                    <a href="https://dvp-construction.sk/about.html" class="btn-white-outline montserrat-alternates-bold">O nás</a>
+                    <a href="https://dvp-construction.sk/about.html" class="btn-white-outline montserrat-alternates-bold">Služby</a>
                 </div>
             </div>
             <div class="wave-separator">
