--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
             <div class="navigation">
                 <div class="logo-section"><span class="montserrat-alternates-bold logo"><a href="https://dvp-construction.sk/"><span class="color-gold">DVP</span><span class="color-snowwhite"> Construction</span></a></div>
                 <div class="contact-section">
-                    <a href="#contact-form" class="btn-white-outline montserrat-alternates-bold">Kontakt</a>
-                    <a href="#contact-form" class="btn-white-outline montserrat-alternates-bold">Služby</a>
+                    <a href="https://dvp-construction.sk/#contact-form" class="btn-white-outline montserrat-alternates-bold">Kontakt</a>
+                    <a href="https://dvp-construction.sk/about.html" class="btn-white-outline montserrat-alternates-bold">Služby</a>
                 </div>
             </div>
             <div class="hero-body">
